@@ -180,6 +180,8 @@ char *fake = N_("Calculate the nth triangular number");
 char *fake = N_("Calculate permutations");
 char *fake = N_("Integration of f by Composite Simpson's Rule on the interval [a,b] with the number of steps calculated by the fourth derivative bound and the desired tolerance");
 char *fake = N_("Attempt to calculate derivative by trying first symbolically and then numerically");
+char *fake = N_("FIXME");
+char *fake = N_("FIXME");
 char *fake = N_("Try to calculate an infinite product for a single parameter function");
 char *fake = N_("Try to calculate an infinite product for a double parameter function with func(arg,n)");
 char *fake = N_("Try to calculate an infinite sum for a single parameter function");
@@ -190,12 +192,18 @@ char *fake = N_("Calculate the left limit of a real-valued function at x0");
 char *fake = N_("Calculate the limit of a real-valued function at x0.  Tries to calculate both left and right limits.");
 char *fake = N_("Integration by midpoint rule");
 char *fake = N_("Attempt to calculate numerical derivative");
+char *fake = N_("FIXME");
+char *fake = N_("FIXME");
+char *fake = N_("FIXME");
+char *fake = N_("FIXME");
 char *fake = N_("Integration by rule set in NumericalIntegralFunction of f from a to b using NumericalIntegralSteps steps");
 char *fake = N_("Attempt to calculate numerical left derivative");
 char *fake = N_("Attempt to calculate the limit of f(step_fun(i)) as i goes from 1 to N");
 char *fake = N_("Attempt to calculate numerical right derivative");
+char *fake = N_("FIXME");
 char *fake = N_("Compute one-sided derivative using five point formula");
 char *fake = N_("Compute one-sided derivative using three-point formula");
+char *fake = N_("FIXME");
 char *fake = N_("Calculate the right limit of a real-valued function at x0");
 char *fake = N_("Compute two-sided derivative using five-point formula");
 char *fake = N_("Compute two-sided derivative using three-point formula");
