@@ -1,3 +1,12 @@
+Thu Apr 23 01:32:06 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Fix opening new files from the command line.
+	  It just works now.
+
+	* lib/calculus/Makefile.am, lib/calculus/fourier.gel:  Add some
+	  Fourier series routines.  This currently exposes a bug in scoping
+	  rules
+
 Sun Apr 19 19:27:09 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/geniustests.txt, src/testprec.gel: test the precision stuff
